Archive2/89/b86bed83e5dbda/output
main.cpp: In function 'int main()':
main.cpp:6:22: error: 'expression' was not declared in this scope
     auto&& __range = expression;
                      ^
main.cpp:7:26: error: 'begin' was not declared in this scope
      for (auto __begin = begin-expression,
                          ^
main.cpp:7:26: note: suggested alternative:
In file included from /usr/local/include/c++/4.9.2/bits/basic_string.h:42:0,
                 from /usr/local/include/c++/4.9.2/string:52,
                 from /usr/local/include/c++/4.9.2/bits/locale_classes.h:40,
                 from /usr/local/include/c++/4.9.2/bits/ios_base.h:41,
                 from /usr/local/include/c++/4.9.2/ios:42,
                 from /usr/local/include/c++/4.9.2/ostream:38,
                 from /usr/local/include/c++/4.9.2/iostream:39,
                 from main.cpp:1:
/usr/local/include/c++/4.9.2/initializer_list:89:5: note:   'std::begin'
     begin(initializer_list<_Tp> __ils) noexcept
     ^
main.cpp:9:22: error: '__end' was not declared in this scope
           __begin != __end;
                      ^
main.cpp:12:8: error: 'declaration' was not declared in this scope
        declaration = *__begin;
        ^
main.cpp:13:8: error: 'statement' was not declared in this scope
        statement
        ^
