Archive2/89/b86bed83e5dbda/main.cpp
#include <iostream>
#include <vector>
 
int main() 
{
    auto&& __range = expression;
     for (auto __begin = begin-expression,
               __end = end-expression;
          __begin != __end;
          ++__begin)
     {
       declaration = *__begin;
       statement
    }
}